force-app/main/default/objects/Commodity_Code_List__mdt/Commodity_Code_List__mdt.object-meta.xml
<CustomObject>
    <label>Commodity Code List</label>
    <pluralLabel>Commodity Codes List</pluralLabel>
</CustomObject>