force-app/main/default/objects/Commodity_Code_List__mdt/fields/Commodity_Code__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code__c</fullName>
    <label>Commodity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>