force-app/main/default/objects/Commodity_Code_List__mdt/fields/Commodity_Description__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Description__c</fullName>
    <label>Commodity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>