force-app/main/default/objects/Commodity_Code_List__mdt/fields/SCH_Code__c.field-meta.xml
<CustomField>
    <fullName>SCH_Code__c</fullName>
    <label>SCH Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>